Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43302

Unable to get android style for a qwidget application with qt 5.4

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.1
    • 5.4.0
    • QPA
    • None
    • I am developing on windows 7 64bits. My device is a Samsung Galaxy S4 running Android 4.4.2
    • Android
    • 2dbbff0364bd36bc25737cb31516f98e0546c9dc

      As discussed in the mailing list I am not able to get androidStyle working even for a very basic qwidget-based application (just a new QWidget app from creator with just a QPushbutton and a QSlider in the form, all deployment options etc left to default).

      If I run the Qt Quick Controls "gallery" then I get the style ok, but as it seems I cannot get it with a widget-based application. I used to load androidStyle from ministro in 5.3.2, but it does not appear anymore in QStyleFactory::keys(), I get only "Windows" and "Fusion"

      I have removed all reference to previous qt related applications, including Ministro.

      As requested I join a list of files found under C:\qtDev\build-testStyle-Android_for_armeabi_v7a_GCC_4_8_Qt_5_4_0_91c2a8-Release\android-build\libs\armeabi-v7a

      Thanks
      Philippe Lelong

        1. build-content.png
          198 kB
          Philippe Lelong
        For Gerrit Dashboard: QTBUG-43302
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            maitai Philippe Lelong
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes