Build Android style on Windows host

The Windows configure application was missing the logic to enable
the Android style, so this was missing from the Windows packages.

[ChangeLog][Android] Included Android style on Windows hosts.

Task-number: QTBUG-43302
Change-Id: I6a1423d58d00e7b4d4fd0a3d1a12cce10aa2fc91
Reviewed-by: BogDan Vatra <bogdan@kde.org>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>

cregit: 2dbbff0364bd36bc25737cb31516f98e0546c9dc https://github.com/qt/qtbase/commit/2dbbff0364bd36bc25737cb31516f98e0546c9dc