tools/configure/configureapp.cpp
@@ -11090,6 +11090,13 @@ index|]
 operator|=
 literal|"yes"
 expr_stmt|;
+name|dictionary
+index|[
+literal|"STYLE_ANDROID"
+index|]
+operator|=
+literal|"yes"
+expr_stmt|;
 block|}
 block|}
 end_function
@@ -17723,6 +17730,19 @@ condition|)
 name|qmakeStyles
 operator|+=
 literal|"windowsmobile"
+expr_stmt|;
+if|if
+condition|(
+name|dictionary
+index|[
+literal|"STYLE_ANDROID"
+index|]
+operator|==
+literal|"yes"
+condition|)
+name|qmakeStyles
+operator|+=
+literal|"android"
 expr_stmt|;
 comment|// Databases ----------------------------------------------------
 if|if
